--- a/homePage.html
+++ b/homePage.html
@@ -8,6 +8,9 @@
 <link href="css/bootstrap-4.2.1.css" rel="stylesheet" type="text/css">
 <link href="css/cardEffects.css" rel="stylesheet" type="text/css">
 <style>
+
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+	
 body, html {
   height: 100%;
 }
@@ -62,9 +65,18 @@ body, html {
 	
 
 
+.cardText {
+		font-family: 'Muli', sans-serif;
+		font-size: 25px;
+		text-align: center;
+		color: #FFFFFF;
+		text-shadow: 1 1 40px black;
+		
+	}
 	
 </style>
 	
+
 </head>
 
 <body>
@@ -90,18 +102,22 @@ body, html {
 	
 <div class="container">
 	<div class="row">
-	  <div class="col-lg-4">
+	  <div class="col-lg-4" style="padding: 20px">
 		  
-
-
   <div class="box">
 	
-		<h1>Editing</h1>  
-
-  		</div>
+	  <div class="cardText">
+		  <br>
+		  <hr style="background-color: white">
+		<h1>VIDEO EDITING</h1>  
+		  <hr>
+	  </div>
+  </div>
 		  
-	</div>    
-	  <div class="col-xl-4"> 
+	</div>   
+		
+		
+	  <div class="col-lg-4"> 
 		  <div class="card col-md">
 	      <div class="card-body">
 	        <h5 class="card-title">Card title</h5>
