--- a/homePage.html
+++ b/homePage.html
@@ -54,7 +54,7 @@ body, html {
         vertical-align: top;
     }
 
-    .navbar .navbar-collapse {
+	.navbar .navbar-collapse {
         text-align: center;
     }
 	.navbar-nav > li {
@@ -70,7 +70,8 @@ body, html {
 		font-size: 25px;
 		text-align: center;
 		color: #FFFFFF;
-		text-shadow: 1 1 40px black;
+		text-shadow: 2px 2px 8px BLACK;
+
 		
 	}
 	
@@ -101,39 +102,58 @@ body, html {
 	
 	
 <div class="container">
-	<div class="row">
+	<div class="row" style="margin-top: 20px">
 	  <div class="col-lg-4" style="padding: 20px">
-		  
-  <div class="box">
+		  		<a href="" style="color: rgba(130,26,32,1.00)"> 
+		  <div class="box" style="margin: auto; display: block">
+			<div class="cardText">
+		  		<br>
+		  		<hr style="background-color: white">
+				<h1>VIDEO EDITING</h1>  
+		  		<hr style="background-color: white">
+	  		</div>
+  		  </div>  
+				</a>
+	   </div>   
+	   <div class="col-lg-4" style="padding: 20px"> 
+		   		<a href="" style="color: rgba(107,12,101,1.00)">
+		   <div class="boxAF" style="margin: auto; display: block">
+			  <div class="cardText">
+		  		<br>
+		  		<hr style="background-color: white">
+				<h1>GRAPHICS</h1>  
+		  		<hr style="background-color: white">
+	  		  </div>
+    	   </div>
+		   		</a>
+	   </div>
+	  <div class="col-lg-4" style="padding: 20px">
+		  		<a href="">
+	    	 <div class="boxPS" style="margin: auto; display: block">
+			  <div class="cardText">
+		  		<br>
+		  		<hr style="background-color: white">
+				<h1>PHOTO EDITING</h1>  
+		  		<hr style="background-color: white">
+	  		  </div>
+    	   </div>
+				 </a>
+	  </div>
+  </div>
 	
-	  <div class="cardText">
-		  <br>
-		  <hr style="background-color: white">
-		<h1>VIDEO EDITING</h1>  
-		  <hr>
-	  </div>
-  </div>
-		  
-	</div>   
-		
-		
-	  <div class="col-lg-4"> 
-		  <div class="card col-md">
-	      <div class="card-body">
-	        <h5 class="card-title">Card title</h5>
-	        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-        </div>
-	  </div>
-	  <div class="col-xl-4">
-	    <div class="card col-md">
-	      <div class="card-body">
-	        <h5 class="card-title">Card title</h5>
-	        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-	  </div>
-  </div>
+	<a href="" style="color: rgba(10,119,26,1.00)">
+	 <div class="boxWeb" style="margin: auto; display: block; margin-top: 20px">
+			  <div class="cardText">
+		  		<br>
+		  		<hr style="background-color: white">
+				<h1>WEB DESIGN</h1>  
+		  		<hr style="background-color: white">
+	  		  </div>
+    	   </div>
+	</a>
+	
+	
+	
 </div>
 	
 	<br>
